Fix bug in star rating to stop page from jumping to the top after selection

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -159,6 +159,10 @@ font-family: 'Raleway', sans-serif;
 
 /* CREDIT https://codepen.io/hesguru/pen/BaybqXv*/
 
+*{
+    margin: 0;
+    padding: 0;
+}
 .rate {
     float: left;
     height: 46px;
@@ -166,7 +170,6 @@ font-family: 'Raleway', sans-serif;
 }
 .rate:not(:checked) > input {
     position:absolute;
-    top:-9999px;
 }
 .rate:not(:checked) > label {
     float:right;
